# diving-calc

./: .coverage  main.py  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: presiones.ipynb
notebooks/.ipynb_checkpoints/: presiones-checkpoint.ipynb
scripts/: layout.tcss  main.py
src/diving_calc/calculators/: altitude_calculator.py  nitrox_calculator.py  rounding.py
src/diving_calc/deco/: compartment.py  compartments.py  tissue.py
src/diving_calc/gases/: gas.py  gas_mixtures.py  gas_names.py
src/diving_calc/physics/: depth_converter.py  pressure_converter.py
src/pyscuba/: agua.py  gas.py  gas_mixtures.py  gas_names.py  presion.py  profundidad.py
src/pyscuba/calculators/: altitude_calculator.py  nitrox_calculator.py
src/pyscuba/gases/: gas_mixtures.py  standard_gases.py
src/pyscuba/physics/: depth_converter.py  pressure.py  pressure_converter.py
test/: test_gas.py  test_gas_mixtures.py  test_gas_names.py
tests/: test_depth_converter.py  test_gas_mixtures.py  test_standard_gases.py
tests/unit/: test_altitude_calculator.py  test_depth_converter.py  test_gas.py  test_gas_mixtures.py  test_gas_names.py  test_nitrox_calculator.py  test_pressure_converter.py  test_standard_gases.py
theory/: ead.md  mod.md
