[project]
name = "pyscuba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=2.1.0",
]


[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
    "pytest>=8.3.4",
]
