[project]
name = "diving-calc"
version = "0.1.0"
description = "CLI app for diving calculations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "textual>=2.1.0",
]


[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit","tests/integration"]
#addopts = "--cov=src --cov-report=term"


[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pymermaider>=0.1.4",
]
